update java 17 and game version 0.21.27
removed EnumHelper.java and RaidTimerPatch.java